@@ -1,3 +1,8 @@
+2014-05-21  Junichi Satoh <junichi@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Improved 'FF threshold' to be able to define
+	each state changing.
+
 2014-05-20  Ramon Novoa  <rnovoa@artica.es>
 
 	* bin/pandora_server: Stop the service when the server crashes (win32).
